# Advent-Of-Code-Public

./: Cargo.toml  README.md  benchmark.ps1  benchmark_results.txt  new.ps1
.cargo/: config.toml
a2015/: Cargo.toml
a2016/: Cargo.toml
a2017/: Cargo.toml
a2017/src/: lib.rs
a2018/: Cargo.toml
a2020/: Cargo.toml
a2022/: Cargo.toml
a2023/: Cargo.toml
a2024/: Cargo.toml
a2025/: Cargo.toml
lib/: Cargo.toml
lib/src/: digit_iter.rs  dir.rs  entity.rs  grid.rs  lib.rs  point2.rs  range.rs  range_set.rs  utils.rs  vec2.rs
lib/src/a_star/: a_star_multi.rs  a_star_score.rs  a_star_single.rs  mod.rs  node.rs  path.rs
lib/src/grid/: inner.rs  mod.rs  outer.rs
lib/src/offset/: dir.rs  mod.rs  vec2.rs
lib/src/utils/: iter_ext.rs  macros.rs  misc.rs  mod.rs  slice_ext.rs  string_ext.rs  tuple_ext.rs
