[package]
name = "lib"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_more = { version = "1.0.0", features = ["add", "add_assign", "mul", "mul_assign", "not"] }
either = "1.13.0"
itertools = "0.13.0"
md5 = "0.7.0"
num = "0.4.3"
rand = "0.9.1"
regex = "1.11.1"
serde_json = "1.0.140"

[lints]
workspace = true
