[package]
name = "lib"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_more = { version = "2.0.1", features = [
    "add",
    "add_assign",
    "mul",
    "mul_assign",
    "not",
    "display",
] }
either = "1.13.0"
indexmap = "2.10.0"
itertools = "0.14.0"
md5 = "0.7.0"
num = "0.4.3"
num-bigint = "0.4.6"
pathfinding = "4.14.0"
rand = "0.9.1"
rayon = "1.10.0"
regex = "1.11.1"
serde_json = "1.0.140"

[lints]
workspace = true
